; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm64/arm64/extr_busdma_machdep.c_bus_dma_run_filter.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm64/arm64/extr_busdma_machdep.c_bus_dma_run_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bus_dma_tag_common = type { i32, i32, i32, i64 (i32, i32)*, %struct.bus_dma_tag_common*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bus_dma_run_filter(%struct.bus_dma_tag_common* %0, i32 %1) #0 {
  %3 = alloca %struct.bus_dma_tag_common*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.bus_dma_tag_common* %0, %struct.bus_dma_tag_common** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %52, %2
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.bus_dma_tag_common*, %struct.bus_dma_tag_common** %3, align 8
  %9 = getelementptr inbounds %struct.bus_dma_tag_common, %struct.bus_dma_tag_common* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp sgt i32 %7, %10
  br i1 %11, label %12, label %18

12:                                               ; preds = %6
  %13 = load i32, i32* %4, align 4
  %14 = load %struct.bus_dma_tag_common*, %struct.bus_dma_tag_common** %3, align 8
  %15 = getelementptr inbounds %struct.bus_dma_tag_common, %struct.bus_dma_tag_common* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = icmp sle i32 %13, %16
  br i1 %17, label %26, label %18

18:                                               ; preds = %12, %6
  %19 = load i32, i32* %4, align 4
  %20 = load %struct.bus_dma_tag_common*, %struct.bus_dma_tag_common** %3, align 8
  %21 = getelementptr inbounds %struct.bus_dma_tag_common, %struct.bus_dma_tag_common* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 8
  %23 = sub nsw i32 %22, 1
  %24 = and i32 %19, %23
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %42

26:                                               ; preds = %18, %12
  %27 = load %struct.bus_dma_tag_common*, %struct.bus_dma_tag_common** %3, align 8
  %28 = getelementptr inbounds %struct.bus_dma_tag_common, %struct.bus_dma_tag_common* %27, i32 0, i32 3
  %29 = load i64 (i32, i32)*, i64 (i32, i32)** %28, align 8
  %30 = icmp eq i64 (i32, i32)* %29, null
  br i1 %30, label %41, label %31

31:                                               ; preds = %26
  %32 = load %struct.bus_dma_tag_common*, %struct.bus_dma_tag_common** %3, align 8
  %33 = getelementptr inbounds %struct.bus_dma_tag_common, %struct.bus_dma_tag_common* %32, i32 0, i32 3
  %34 = load i64 (i32, i32)*, i64 (i32, i32)** %33, align 8
  %35 = load %struct.bus_dma_tag_common*, %struct.bus_dma_tag_common** %3, align 8
  %36 = getelementptr inbounds %struct.bus_dma_tag_common, %struct.bus_dma_tag_common* %35, i32 0, i32 5
  %37 = load i32, i32* %36, align 8
  %38 = load i32, i32* %4, align 4
  %39 = call i64 %34(i32 %37, i32 %38)
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %42

41:                                               ; preds = %31, %26
  store i32 1, i32* %5, align 4
  br label %42

42:                                               ; preds = %41, %31, %18
  %43 = load %struct.bus_dma_tag_common*, %struct.bus_dma_tag_common** %3, align 8
  %44 = getelementptr inbounds %struct.bus_dma_tag_common, %struct.bus_dma_tag_common* %43, i32 0, i32 4
  %45 = load %struct.bus_dma_tag_common*, %struct.bus_dma_tag_common** %44, align 8
  store %struct.bus_dma_tag_common* %45, %struct.bus_dma_tag_common** %3, align 8
  br label %46

46:                                               ; preds = %42
  %47 = load i32, i32* %5, align 4
  %48 = icmp eq i32 %47, 0
  br i1 %48, label %49, label %52

49:                                               ; preds = %46
  %50 = load %struct.bus_dma_tag_common*, %struct.bus_dma_tag_common** %3, align 8
  %51 = icmp ne %struct.bus_dma_tag_common* %50, null
  br label %52

52:                                               ; preds = %49, %46
  %53 = phi i1 [ false, %46 ], [ %51, %49 ]
  br i1 %53, label %6, label %54

54:                                               ; preds = %52
  %55 = load i32, i32* %5, align 4
  ret i32 %55
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
